# Xai-model-for-personalized-treatment-recommendation

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  base_modal_code.py  docker-compose.yml  mlflow.db.bak.20251030235548  mlflow.out  package_setup.py  project_setup.py  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh  setup_script.py
.github/workflows/: ci.yml
api/: production_api.py
config/: data_config.yaml  explainability_config.yaml  mlflow_config.yaml  model_config.yaml  operational_model_config.yaml  personalization_config.yaml  training_config.yaml
data/: Xai_datasets.csv  package-lock.json
data/processed/: test_data.csv  train_data.csv
data/raw/: synthetic_healthcare_data.csv  synthetic_healthcare_data_with_missing.csv
notebooks/: 01_phase1_implementation.ipynb
paper_visualizations/: __init__.py
scripts/: convert_additional_datasets.py  convert_core_datasets.py  dataset_manager.py  dataset_setup_guide.sh  enhanced_training_pipeline.py  exact_dataset_placement.sh  explainability_toolkit.py  generate_sample_data.py  inspect_model.py  mlflow_manager.py  model_performance_analysis.py  operational_model_suite.py  operational_suite_status.py  personalization_cli.py  personalization_engine.py  process_real_datasets.py  quick_operational_suite.py  real_dataset_explainer.py  register_demo_breast_cancer.py  register_joblib_as_pyfunc.py  register_models_from_joblib.py  register_production_models.py  run_explainability_for_selected.py  simple_explainer.py  test_api_with_patients.py  test_mlflow.py  test_patient_prediction.py  test_patient_prediction_with_xai.py  train_all_datasets_mlflow.py  train_ensembles.py  train_real_datasets.py  validate_datasets.py  validate_deployment.py  validate_phase1.py
src/hybrid_xai_healthcare/: __init__.py
src/hybrid_xai_healthcare/api/: __init__.py  app.py  schemas.py
src/hybrid_xai_healthcare/config/: __init__.py  config_manager.py
src/hybrid_xai_healthcare/data/: __init__.py  data_loader.py  multimodal_ingestion.py  preprocessor.py
src/hybrid_xai_healthcare/explainability/: __init__.py
tests/: test_api.py  test_api_integration.py  test_ensembles.py  test_explainable_pipeline.py  test_imbalance_utils.py  test_model_loading.py  test_train_pipeline.py
visualizaion/: generate_all_figures.py  test_models_load.py
(+8 files in other folders)
