[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-xai-healthcare"
version = "0.1.0"
description = "Hybrid Explainable AI Models for Personalized Treatment Recommendation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["machine-learning", "healthcare", "explainable-ai", "personalized-medicine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "shap>=0.41.0",
    "lime>=0.2.0.1",
    "mlflow>=1.28.0",
    "fastapi>=0.78.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy", "pre-commit"]
docs = ["sphinx", "sphinx-rtd-theme"]
all = ["pytest", "black", "flake8", "mypy", "sphinx", "sphinx-rtd-theme"]

[project.urls]
Homepage = "https://github.com/yourusername/hybrid-xai-healthcare"
Documentation = "https://hybrid-xai-healthcare.readthedocs.io/"
Repository = "https://github.com/yourusername/hybrid-xai-healthcare.git"
Issues = "https://github.com/yourusername/hybrid-xai-healthcare/issues"

[project.scripts]
hybrid-xai-train = "hybrid_xai_healthcare.scripts.train_model:main"
hybrid-xai-predict = "hybrid_xai_healthcare.scripts.predict:main"
hybrid-xai-explain = "hybrid_xai_healthcare.scripts.generate_explanations:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=src --cov-report=html --cov-report=term"
